
Project tempus {
    database_type: 'PostgreSQL'
}

Table teams {
  id bigserial [pk]
  name varchar(255) [not null]
  manager_id bigint [ref: - users.id, default: null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [default: null]
  
  indexes {
    id
    manager_id
  }
}

Table users {
  id bigserial [pk]
  role int [ref: > roles.role, not null]
  username varchar(255) [unique, not null]
  email varchar(255) [unique, not null]
  name varchar(255) [not null]
  surname varchar(255) [not null]
  company_id bigint [default: null]
  password varchar(255) [not null]
  gender varchar(255) [default: 'unknown']
  birth_date date [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [default: null]
  language varchar(2) [note: 'ISO-2 language code']
  country varchar(2) [note: 'ISO-2 Country code']
  timezone varchar(255) [note: 'Timezone name']
  manager_id bigint [ref: - users.id, default: null]
  team_id bigint [ref: > teams.id, default: null]
  
  indexes {
    email
    username
    manager_id
    team_id
  }
}

Table roles {
  id bigserial [pk]
  role int [not null, unique, note: '>0 && <=5']
  name varchar(255) [not null, unique]
}

Table absences {
  id bigserial [pk] // auto-increment
  user_id bigint [not null] 
  start_time timestamp [not null]
  end_time timestamp [default: null]
  reason varchar(255) [not null]
  paid boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [default: null]
  approved_by_id bigint [ref: > users.id, default: null]
  indexes {
    user_id
  }
}

Table entries {
  id bigserial [pk]
  user_id bigint [not null] 
  start_time timestamp [not null]
  end_time timestamp [default: null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [default: null]
  indexes {
    user_id
  }
}

Table companies {
  id bigint [pk, increment, ref: < users.company_id]
  name varchar(255) [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [default: null]
}

Table sessions {
  id uuid [pk]
  username varchar [not null]
  refresh_token varchar [not null]
  user_agent varchar [not null]
  client_ip varchar [not null]
  is_blocked boolean [not null]
  expires_at timestamp [not null]
  created_at timestamp [not null, default: `now()`]
}

Ref user_entries: users.id < entries.user_id [delete: cascade]
Ref user_absences: users.id < absences.user_id [delete: cascade]
Ref user_sessions: users.username < sessions.username [delete: cascade]